* camera.cpp 변경 - ThreadCam -> Camera 객체로 변경, camera.cpp 에서 분리 - CamObj -> QtCamObj 로 변경, 기존 camera.cpp 파일 대체
* frame_info 객체 신규 생성
 - 기존에 camera.cpp 에서 하던 작업 일체 분리
 - 캠 화면 Frame에 대한 정보를 가지고 있음

* 코드 리팩토링
 - 한글 주석 일부 추가
 - 객체 및 함수 네이밍 통일화 작업

** 신규 객체 frame_info와 camera 통합이 가능할 것 같아보임. 분석 후 작업 진행예정
** frame_info 중복 선언되었다는 오류가 뜨는데 찾지 못했음. 프로그램 실행에는 문제가 없음
** Qt 설치 파일 만드는 작업 진행 필요. 외부 라이브러리 필요 없이 실행 가능하도록.

--- a/ProcessCam2.vcxproj.filters
+++ b/ProcessCam2.vcxproj.filters
@@ -41,7 +41,7 @@
     <ClCompile Include="cameralistmodel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="camera.cpp">
+    <ClCompile Include="qtCamObj.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="font_atlas.cpp">
@@ -65,9 +65,6 @@
     <ClCompile Include="VertexBufferLayout.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="stb_implement.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="text_geom_store.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -86,15 +83,24 @@
     <ClCompile Include="box_geom_store.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="frame_info.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="frame_info.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="settingmanager.h">
       <Filter>Header Files</Filter>
     </QtMoc>
-    <QtMoc Include="opencvwidget.h">
+    <QtMoc Include="cameralistmodel.h">
       <Filter>Header Files</Filter>
     </QtMoc>
-    <QtMoc Include="cameralistmodel.h">
+    <QtMoc Include="qtCamObj.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
@@ -108,12 +114,10 @@
     <None Include="camera_frag_shader.vert" />
     <None Include="box_frag_shader.frag" />
     <None Include="box_frag_shader.vert" />
+    <None Include=".editorconfig" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="textarea.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="font_atlas.h">
@@ -137,12 +141,6 @@
     <ClInclude Include="IndexBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="stb_image.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="stb_implement.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="text_geom_store.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -159,6 +157,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="box_geom_store.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
