--- a/ProcessCam2.vcxproj
+++ b/ProcessCam2.vcxproj
@@ -125,9 +125,12 @@
   <ItemGroup>
     <ClCompile Include="box_geom_store.cpp" />
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="qtCamObj.cpp" />
     <ClCompile Include="cameralistmodel.cpp" />
     <ClCompile Include="cam_geom_store.cpp" />
     <ClCompile Include="font_atlas.cpp" />
+    <ClCompile Include="frame_info.cpp" />
+    <ClCompile Include="frame_info.h" />
     <ClCompile Include="gBuffers.cpp" />
     <ClCompile Include="text_geom_store.cpp" />
     <ClCompile Include="glad.c" />
@@ -135,13 +138,13 @@
     <ClCompile Include="label_text_store.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="shader.cpp" />
-    <ClCompile Include="stb_implement.cpp" />
     <ClCompile Include="TextArea.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="util.cpp" />
     <ClCompile Include="VertexArray.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
     <ClCompile Include="VertexBufferLayout.cpp" />
+    <None Include=".editorconfig" />
     <None Include="camera_frag_shader.frag" />
     <None Include="camera_frag_shader.vert" />
     <None Include="box_frag_shader.frag" />
@@ -154,25 +157,23 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="box_geom_store.h" />
+    <ClInclude Include="camera.h" />
     <ClInclude Include="cam_geom_store.h" />
+    <QtMoc Include="qtCamObj.h" />
     <ClInclude Include="text_geom_store.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="label_text_store.h" />
     <ClInclude Include="shader.h" />
-    <ClInclude Include="stb_image.h" />
-    <ClInclude Include="stb_implement.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="VertexArray.h" />
     <ClInclude Include="VertexBuffer.h" />
     <ClInclude Include="VertexBufferLayout.h" />
     <QtMoc Include="cameralistmodel.h" />
-    <QtMoc Include="opencvwidget.h" />
     <ClInclude Include="font_atlas.h" />
     <ClInclude Include="gBuffers.h" />
     <ClInclude Include="textarea.h" />
     <QtMoc Include="settingmanager.h" />
-    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="ttf_CenturyGothic.ttf" />
