--- a/ProcessCam2.vcxproj
+++ b/ProcessCam2.vcxproj
@@ -125,26 +125,26 @@
   <ItemGroup>
     <ClCompile Include="box_geom_store.cpp" />
     <ClCompile Include="camera.cpp" />
-    <ClCompile Include="qtCamObj.cpp" />
-    <ClCompile Include="cameralistmodel.cpp" />
+    <ClCompile Include="qt_camera.cpp" />
+    <ClCompile Include="camera_list_model.cpp" />
     <ClCompile Include="cam_geom_store.cpp" />
     <ClCompile Include="font_atlas.cpp" />
     <ClCompile Include="frame_info.cpp" />
-    <ClCompile Include="frame_info.h" />
-    <ClCompile Include="gBuffers.cpp" />
+    <ClInclude Include="frame_info.h" />
+    <ClCompile Include="g_buffers.cpp" />
+    <ClCompile Include="setting_manager.cpp" />
     <ClCompile Include="text_geom_store.cpp" />
     <ClCompile Include="glad.c" />
-    <ClCompile Include="IndexBuffer.cpp" />
+    <ClCompile Include="index_buffer.cpp" />
     <ClCompile Include="label_text_store.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="shader.cpp" />
-    <ClCompile Include="TextArea.cpp" />
+    <ClCompile Include="text_area.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="util.cpp" />
-    <ClCompile Include="VertexArray.cpp" />
-    <ClCompile Include="VertexBuffer.cpp" />
-    <ClCompile Include="VertexBufferLayout.cpp" />
-    <None Include=".editorconfig" />
+    <ClCompile Include="vertex_array.cpp" />
+    <ClCompile Include="vertex_buffer.cpp" />
+    <ClCompile Include="vertex_buffer_layout.cpp" />
     <None Include="camera_frag_shader.frag" />
     <None Include="camera_frag_shader.vert" />
     <None Include="box_frag_shader.frag" />
@@ -152,28 +152,27 @@
     <None Include="text_frag_shader.frag" />
     <None Include="text_vert_shader.vert" />
     <QtRcc Include="qml.qrc" />
-    <None Include="colorDialog.qml" />
     <None Include="main.qml" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="box_geom_store.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="cam_geom_store.h" />
-    <QtMoc Include="qtCamObj.h" />
+    <QtMoc Include="qt_camera.h" />
     <ClInclude Include="text_geom_store.h" />
-    <ClInclude Include="IndexBuffer.h" />
+    <ClInclude Include="index_buffer.h" />
     <ClInclude Include="label_text_store.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="util.h" />
-    <ClInclude Include="VertexArray.h" />
-    <ClInclude Include="VertexBuffer.h" />
-    <ClInclude Include="VertexBufferLayout.h" />
-    <QtMoc Include="cameralistmodel.h" />
+    <ClInclude Include="vertex_array.h" />
+    <ClInclude Include="vertex_buffer.h" />
+    <ClInclude Include="vertex_buffer_layout.h" />
+    <QtMoc Include="camera_list_model.h" />
     <ClInclude Include="font_atlas.h" />
-    <ClInclude Include="gBuffers.h" />
-    <ClInclude Include="textarea.h" />
-    <QtMoc Include="settingmanager.h" />
+    <ClInclude Include="g_buffers.h" />
+    <ClInclude Include="text_area.h" />
+    <QtMoc Include="setting_manager.h" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="ttf_CenturyGothic.ttf" />
